--- a/serverless.yml
+++ b/serverless.yml
@@ -50,8 +50,16 @@ functions:
   get:
     handler: get.main
     events:
-      -http:
-        path: notes/{id}
-        method: get
-        cors: true
-        authorizer: aws_iam
+      - http:
+          path: notes/{id}
+          method: get
+          cors: true
+          authorizer: aws_iam
+  list:
+    handler: list.main
+    events:
+      - http:
+          path: notes
+          method: get
+          cors: true
+          authorizer: aws_iam
