--- a/resources/api-gateway-errors.yml
+++ b/resources/api-gateway-errors.yml
@@ -1,5 +1,6 @@
 Resources:
   GatewayResponseDefault4XX:
+    Type: "AWS:ApiGateway::GatewayResponse"
     Properties:
       gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
       gatewayresponse.header.Access-Control-Allow-Headers: "'*'"
@@ -7,6 +8,7 @@ Resources:
     RestApiId:
       Ref: "ApiGatewayRestApi"
   GatewayResponseDefault5XX:
+    Type: "AWS:ApiGateway::GatewayResponse"
     Properties:
       gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
       gatewayresponse.header.Access-Control-Allow-Headers: "'*'"
