--- a/serverless.yml
+++ b/serverless.yml
@@ -77,6 +77,7 @@ functions:
     events:
       - http:
           path: notes/{id}
+          method: delete
           cors: true
           authorizer: aws_iam
   billing:
